After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779526 - Diagnostic sidebar get randomly cleared
Diagnostic sidebar get randomly cleared
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
3.23.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-03 12:12 UTC by Felix Häcker
Modified: 2017-03-09 01:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
demo_video (1.18 MB, video/webm)
2017-03-03 12:12 UTC, Felix Häcker
  Details
meson: fix access to path suffix (1.11 KB, patch)
2017-03-03 18:53 UTC, Christian Hergert
committed Details | Review
pipeline: add IdeBuildPhase to started signal (2.94 KB, patch)
2017-03-09 01:15 UTC, Christian Hergert
committed Details | Review
buildui: only clear diagnostics if rebuilding (1.43 KB, patch)
2017-03-09 01:15 UTC, Christian Hergert
committed Details | Review

Description Felix Häcker 2017-03-03 12:12:19 UTC
Created attachment 347126 [details]
demo_video

Builder Version: 3.23.91+67-g8602367 (flatpak-nightly)

If i click on some warning / error message items, sometimes the items are disappearing.

Build output:
-------------------------------------------------------------------------------
13:08:26.0032                          (null)[2]:  WARNING: Error retrieving accessibility bus address: org.freedesktop.DBus.Error.ServiceUnknown: org.freedesktop.DBus.Error.ServiceUnknown

(gnome-builder:2): Gtk-WARNING **: Failed to measure available space: Permission denied

(gnome-builder:2): Gtk-WARNING **: Failed to measure available space: Permission denied

(gnome-builder:2): Gtk-WARNING **: Failed to measure available space: Permission denied

(gnome-builder:2): Gtk-WARNING **: Allocating size to GtkScrollbar 0x432dea0 without calling gtk_widget_get_preferred_width/height(). How does the code know the size to allocate?
13:09:04.0516              ide-workbench-open[2]:  WARNING: Fehler beim Holen der Informationen für Datei »/Dokumente/Projekte/gradio/src/gradio-category-item-provider.vala«: No such file or directory
sys:1: Warning: g_mapped_file_get_length: assertion 'file != NULL' failed
Exception in thread Thread-2:
Traceback (most recent call last):
  • File "/usr/lib/python3.4/threading.py", line 920 in _bootstrap_inner
    self.run()
  • File "/usr/lib/python3.4/threading.py", line 868 in run
    self._target(*self._args, **self._kwargs)
  • File "/app/lib/gnome-builder/plugins/meson_plugin/__init__.py", line 128 in build_flags_thread
    if infile.get_basename().endswith('.vala'):
AttributeError: 'str' object has no attribute 'get_basename'
-------------------------------------------------------------------------------

I've attached a video.
Comment 1 Christian Hergert 2017-03-03 18:53:17 UTC
Created attachment 347165 [details] [review]
meson: fix access to path suffix

We can just reuse the full path here, since basename is going to be
implied as we check the suffix.
Comment 2 Christian Hergert 2017-03-03 18:54:17 UTC
Comment on attachment 347165 [details] [review]
meson: fix access to path suffix

This at least fixes the python traceback.

Attachment 347165 [details] pushed as 59f6a97 - meson: fix access to path suffix
Comment 3 Felix Häcker 2017-03-08 18:06:54 UTC
Yes python error is gone. But the item's are still disappearing. Builder --verbose output:

18:27:26.0050                                   builder[3]:  MESSAGE: Initializing with Gtk+ version 3.22.9.
18:27:39.0765                      gb-file-search-index[12]:  MESSAGE: File index built in 0,002104 seconds.
18:27:39.0772                         ide-build-manager[3]:  MESSAGE: Failed to locate runtime: Vorgang wurde abgebrochen
18:27:39.0774                gbp-flatpak-pipeline-addin[3]:  MESSAGE: Configuration is not using flatpak, ignoring pipeline

(gnome-builder:3): Gtk-WARNING **: Allocating size to GtkScrollbar 0x385de50 without calling gtk_widget_get_preferred_width/height(). How does the code know the size to allocate?
ctags: Warning: cannot open source file ".flatpak-builder/ccache/bin/cc" : No such file or directory
ctags: Warning: cannot open source file ".flatpak-builder/ccache/bin/c++" : No such file or directory
ctags: Warning: cannot open source file ".flatpak-builder/ccache/bin/gcc" : No such file or directory
ctags: Warning: cannot open source file ".flatpak-builder/ccache/bin/g++" : No such file or directory
ctags: Warning: cannot open source file ".flatpak-builder/ccache/bin/cc" : No such file or directory
ctags: Warning: cannot open source file ".flatpak-builder/ccache/bin/c++" : No such file or directory
ctags: Warning: cannot open source file ".flatpak-builder/ccache/bin/gcc" : No such file or directory
ctags: Warning: cannot open source file ".flatpak-builder/ccache/bin/g++" : No such file or directory
19:05:06.0503                        ide-workbench-open[3]:  WARNING: Fehler beim Holen der Informationen für Datei »/Dokumente/Projekte/gradio/src/gradio-category-item-provider.vala«: No such file or directory
sys:1: Warning: g_mapped_file_get_length: assertion 'file != NULL' failed
19:05:06.0566             ide-git-buffer-change-monitor[3]:  MESSAGE: Die Datei ist nicht unter der Kontrolle des git-Arbeitsordners
ctags: Warning: cannot open source file ".flatpak-builder/ccache/bin/cc" : No such file or directory
ctags: Warning: cannot open source file ".flatpak-builder/ccache/bin/c++" : No such file or directory
ctags: Warning: cannot open source file ".flatpak-builder/ccache/bin/gcc" : No such file or directory
ctags: Warning: cannot open source file ".flatpak-builder/ccache/bin/g++" : No such file or directory
19:05:40.0565                        ide-workbench-open[3]:  WARNING: Fehler beim Holen der Informationen für Datei »/Dokumente/Projekte/gradio/src/gradio-category-item-provider.vala«: No such file or directory
19:05:40.0597             ide-git-buffer-change-monitor[3]:  MESSAGE: Die Datei ist nicht unter der Kontrolle des git-Arbeitsordners
Comment 4 Christian Hergert 2017-03-09 01:15:46 UTC
Created attachment 347519 [details] [review]
pipeline: add IdeBuildPhase to started signal

This let's the listener know what stage we are advancing the pipeline to.
Comment 5 Christian Hergert 2017-03-09 01:15:50 UTC
Created attachment 347520 [details] [review]
buildui: only clear diagnostics if rebuilding

If we are not advancing to or past IDE_BUILD_PHASE_BUILD, then there is no
need to clear the previous diagnostics.
Comment 6 Christian Hergert 2017-03-09 01:17:52 UTC
Attachment 347519 [details] pushed as 6a454de - pipeline: add IdeBuildPhase to started signal
Attachment 347520 [details] pushed as 2c05d8e - buildui: only clear diagnostics if rebuilding