pipeline: add IdeBuildPhase to started signal

This let's the listener know what stage we are advancing the pipeline to.

https://bugzilla.gnome.org/show_bug.cgi?id=779526